--- a/giF0S_Project/Styles/Catch/catch.css
+++ b/giF0S_Project/Styles/Catch/catch.css
@@ -64,7 +64,7 @@ body #buttonZone #logotipe {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 268pxs;
+  margin-bottom: 268px;
 }
 
 #videoContainer div {
@@ -75,16 +75,20 @@ body #buttonZone #logotipe {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 59.3880%;
+  width: 59.4%;
   height: 548px;
   background-color: #E6E6E6;
+  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
 #videoContainer div h1 {
   position: relative;
-  width: 98%;
+  padding-left: 4px;
+  width: 98.5%;
   height: 24px;
-  margin-top: 0px;
+  margin-top: 3px;
+  margin-left: 4px;
   color: #FFFFFF;
   font-size: 14px;
   font-weight: 700;
@@ -94,6 +98,9 @@ body #buttonZone #logotipe {
 }
 
 #videoContainer div h1 #buttonClose {
+  position: absolute;
+  top: 1.5px;
+  right: 4px;
   background-image: url(../../Images/button3.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -103,8 +110,9 @@ body #buttonZone #logotipe {
 }
 
 #videoContainer div #showCapture {
-  width: 90%;
-  height: 548;
+  width: 96%;
+  height: 434px;
+  margin-left: 11px;
   background-color: #FFFFFF;
   border: 1px solid #979797;
   -webkit-box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
@@ -112,8 +120,9 @@ body #buttonZone #logotipe {
 }
 
 #videoContainer div #showCapture #video {
-  width: 100%;
-  height: 100%;
+  margin: 0px;
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 #videoContainer div #showCapture #gif {
@@ -121,13 +130,46 @@ body #buttonZone #logotipe {
   height: 100%;
 }
 
-#videoContainer div #showCapture #globe {
+#videoContainer div #showCapture #uploadingGif {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 434px;
+  margin: 0px;
+  background-color: #FFFFFF;
+  color: #110038;
+  font-family: "Chakra Petch";
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#videoContainer div #showCapture #uploadingGif #globe {
   display: none;
   width: 48px;
   height: 48px;
 }
 
-#videoContainer div #catchButton {
+#videoContainer div #post {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+#videoContainer div #post #catchButton {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -136,20 +178,22 @@ body #buttonZone #logotipe {
       -ms-flex-direction: row;
           flex-direction: row;
   position: relative;
-  width: 12.7955%;
+  background-color: transparent;
+  width: 21%;
   height: 36px;
-  margin: 0px;
+  margin-top: 21px;
+  margin-left: 76.9%;
   padding: 0px;
 }
 
-#videoContainer div #catchButton #cameraButton {
+#videoContainer div #post #catchButton #cameraButton {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 25%;
+  width: 20%;
   height: 32px;
   margin: 0px;
   padding: 0px;
@@ -160,8 +204,20 @@ body #buttonZone #logotipe {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#videoContainer div #catchButton #Button {
-  width: 70%;
+#videoContainer div #post #catchButton #cameraButton:hover {
+  background-color: #F7C9F3;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+#videoContainer div #post #catchButton #Button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 80%;
   height: 32px;
   margin: 0px;
   padding: 0px;
@@ -176,27 +232,59 @@ body #buttonZone #logotipe {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#videoContainer div #recordButton {
+#videoContainer div #post #catchButton #Button:hover {
+  background-color: #F7C9F3;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+#videoContainer div #post #chrono {
+  display: none;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #FFFFFF;
+  color: #110038;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
+  margin-left: 1.3%;
+  border: #979797;
+  -webkit-box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+          box-shadow: inset -2px -2px 0 0 #E6E6E6, inset 2px 2px 0 0 #000000;
+  width: 14.4%;
+  height: 36px;
+}
+
+#videoContainer div #post #stopButton {
   display: none;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
   position: relative;
-  width: 12.7955%;
+  background-color: transparent;
+  width: 21%;
   height: 36px;
-  margin: 0px;
+  margin-top: 21px;
+  margin-left: 61%;
   padding: 0px;
 }
 
-#videoContainer div #recordButton #circleButton {
+#videoContainer div #post #stopButton #buttonTwo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 25%;
+  width: 20%;
   height: 32px;
   margin: 0px;
   padding: 0px;
@@ -206,8 +294,14 @@ body #buttonZone #logotipe {
           box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#videoContainer div #recordButton #readyButton {
-  width: 70%;
+#videoContainer div #post #stopButton #buttonThree {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 80%;
   height: 32px;
   margin: 0px;
   padding: 0px;
@@ -221,86 +315,122 @@ body #buttonZone #logotipe {
           box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
 }
 
-#videoContainer div #stopButton {
+#videoContainer div #post #play {
   display: none;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  position: relative;
-  width: 12.7955%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 2.3%;
+  height: 20px;
+  margin-left: 2.8%;
+  background-image: url(../../Images/forward.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #F7C9F3;
+  border: 1px solid #110038;
+  -webkit-box-shadow: inset -1px -1px 0 0 #997D97, 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #997D97, 1px 1px 0 0 #FFFFFF;
+}
+
+#videoContainer div #post .barStyle {
+  display: none;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 27.9%;
+  height: 20PX;
+  margin-left: 4px;
+}
+
+#videoContainer div #post .barStyle::-webkit-progress-bar {
+  -webkit-box-shadow: inset 2px 2px 0 0 #FFFCFC, inset -2px -2px 0 0 #000000;
+          box-shadow: inset 2px 2px 0 0 #FFFCFC, inset -2px -2px 0 0 #000000;
+}
+
+#videoContainer div #post #repeat {
+  display: none;
+  color: #110038;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 16.7%;
+  height: 32px;
+  margin-top: 33px;
+  margin-left: 13.5%;
+  margin-bottom: 34px;
+  padding: 0px;
+  border: 1px solid #110038;
+  -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  background-color: #FFF4FD;
+}
+
+#videoContainer div #post #repeat:hover {
+  background-color: #F7C9F3;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+#videoContainer div #post #upload {
+  display: none;
+  color: #110038;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 16.7%;
+  height: 32px;
+  margin-top: 33px;
+  margin-left: 1.6%;
+  margin-bottom: 34px;
+  padding: 0px;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Chakra Petch";
+  border: 1px solid #110038;
+  -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+          box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
+  background-color: #FFF4FD;
+}
+
+#videoContainer div #post #upload:hover {
+  background-color: #F7C9F3;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
+}
+
+#videoContainer div #post #cancel {
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  width: 16.7%;
   height: 36px;
-  margin: 0px;
-  padding: 0px;
-}
-
-#videoContainer div #stopButton #buttonTwo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 25%;
-  height: 32px;
-  margin: 0px;
-  padding: 0px;
-  background-color: #61ff88;
-  border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-          box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-}
-
-#videoContainer div #stopButton #buttonThree {
-  width: 70%;
-  height: 32px;
-  margin: 0px;
-  padding: 0px;
-  color: #FFFFFF;
+  color: #110038;
   font-size: 16px;
   font-weight: 400;
   font-family: "Chakra Petch";
-  background-color: #FF6161;
-  border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-          box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-}
-
-#videoContainer div #repeat {
-  display: none;
-  color: #110038;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 25%;
-  height: 32px;
-  margin: 0px;
-  padding: 0px;
-  border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-          box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
+  margin-left: 650px;
   background-color: #FFF4FD;
+  border: solid 1px #110038;
+  -webkit-box-shadow: inset -2ps -2ps 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
+          box-shadow: inset -2ps -2ps 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-#videoContainer div #upload {
-  display: none;
-  color: #110038;
-  width: 70%;
-  height: 32px;
-  margin: 0px;
-  padding: 0px;
-  font-size: 16px;
-  font-weight: 400;
-  font-family: "Chakra Petch";
-  border: 1px solid #110038;
-  -webkit-box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-          box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 #FFFFFF;
-  background-color: #FFF4FD;
-}
-
-#videoContainer div #cancel {
-  display: none;
-  width: 144px;
-  height: 32px;
+#videoContainer div #post #cancel:hover {
+  background-color: #F7C9F3;
+  outline: 1px dotted #110038;
+  outline-offset: -4px;
 }
 /*# sourceMappingURL=catch.css.map */
