--- a/giF0S_Project/Styles/Catch/catch.scss
+++ b/giF0S_Project/Styles/Catch/catch.scss
@@ -56,20 +56,23 @@ body {
 #videoContainer {
     display: flex;
     justify-content: center;
-    margin-bottom: 268pxs;
+    margin-bottom: 268px;
 
     div {
         display: flex;
         flex-direction: column;
-        width: 59.3880%;
+        width: 59.4%;
         height: 548px;
         background-color: #E6E6E6;
+        box-shadow: inset -2px -2px 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
 
         h1 {
             position: relative;
-            width: 98%;
+            padding-left: 4px;
+            width: 98.5%;
             height: 24px;
-            margin-top: 0px;
+            margin-top: 3px;
+            margin-left: 4px;
             color: $fontcolorheader;
             font-size: 14px;
             font-weight: 700;
@@ -77,6 +80,9 @@ body {
             background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
 
             #buttonClose {
+                position: absolute;
+                top: 1.5px;
+                right: 4px;
                 background-image: url(../../Images/button3.svg);
                 background-position: center;
                 background-repeat: no-repeat;
@@ -87,173 +93,271 @@ body {
         }
 
         #showCapture {
-            width: 90%;
-            height: 548;
+            width: 96%;
+            height: 434px;
+            margin-left: 11px;
             background-color: $fontcolorheader;
             border: 1px solid #979797;
             box-shadow: inset -2px -2px 0 0 $backgroundcolorsearchbox, inset 2px 2px 0 0 #000000;
 
             #video {
-                width: 100%;
-                height: 100%;
+                margin: 0px;
+                object-fit: fill;
             }
 
             #gif {
                 width: 100%;
                 height: 100%;
             }
-            #globe{
+
+            #uploadingGif {
                 display: none;
-                width: 48px;
-                height: 48px;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                height: 434px;
+                margin: 0px;
+                background-color: $fontcolorheader;
+                // border: none;
+                // box-shadow: none;
+                color: $outsidebordercolor;
+                font-family: $primaryfont;
+                font-size: 16px;
+                font-weight: bold;
+
+                #globe {
+                    display: none;
+                    width: 48px;
+                    height: 48px;
+                }
             }
         }
 
-        #catchButton {
+        #post {
             display: flex;
             flex-direction: row;
-            position: relative;
-            width: 12.7955%;
-            height: 36px;
-            margin: 0px;
-            padding: 0px;
+            width: 100%;
+            background-color: transparent;
+            border: none;
+            box-shadow: none;
 
-            #cameraButton {
+            #catchButton {
                 display: flex;
-                justify-content: center;
-                width: 25%;
-                height: 32px;
-                margin: 0px;
+                flex-direction: row;
+                position: relative;
+                background-color: transparent;
+                width: 21%;
+                height: 36px;
+                margin-top: 21px;
+                margin-left: 76.9%;
                 padding: 0px;
-                background-color: $themeonegradientcolor1;
-                border: 1px solid $outsidebordercolor;
-                border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+
+                #cameraButton {
+                    display: flex;
+                    justify-content: center;
+                    width: 20%;
+                    height: 32px;
+                    margin: 0px;
+                    padding: 0px;
+                    background-color: $themeonegradientcolor1;
+                    border: 1px solid $outsidebordercolor;
+                    border: 1px solid $outsidebordercolor;
+                    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+
+                    &:hover {
+                        background-color: #F7C9F3;
+                        outline: 1px dotted $outsidebordercolor;
+                        outline-offset: -4px;
+                    }
+                }
+
+                #Button {
+                    display: flex;
+                    justify-content: center;
+                    width: 80%;
+                    height: 32px;
+                    margin: 0px;
+                    padding: 0px;
+                    background-color: $themeonegradientcolor1;
+                    color: $outsidebordercolor;
+                    font-size: 16px;
+                    font-weight: 400;
+                    font-family: $primaryfont;
+                    border: 1px solid $outsidebordercolor;
+                    border: 1px solid $outsidebordercolor;
+                    box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+
+                    &:hover {
+                        background-color: #F7C9F3;
+                        outline: 1px dotted $outsidebordercolor;
+                        outline-offset: -4px;
+                    }
+                }
             }
 
-            #Button {
-                width: 70%;
-                height: 32px;
-                margin: 0px;
-                padding: 0px;
-                background-color: $themeonegradientcolor1;
+            #chrono {
+                display: none;
+                align-self: center;
+                justify-content: center;
+                align-items: center;
+                background-color: $fontcolorheader;
                 color: $outsidebordercolor;
                 font-size: 16px;
                 font-weight: 400;
                 font-family: $primaryfont;
-                border: 1px solid $outsidebordercolor;
-                border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+                margin-left: 1.3%;
+                border: #979797;
+                box-shadow: inset -2px -2px 0 0 $backgroundcolorsearchbox, inset 2px 2px 0 0 #000000;
+                width: 14.4%;
+                height: 36px;
+
             }
-        }
 
-        #recordButton {
-            display: none;
-            flex-direction: row;
-            position: relative;
-            width: 12.7955%;
-            height: 36px;
-            margin: 0px;
-            padding: 0px;
-
-            #circleButton {
-                display: flex;
-                justify-content: center;
-                width: 25%;
-                height: 32px;
-                margin: 0px;
+            #stopButton {
+                display: none;
+                flex-direction: row;
+                position: relative;
+                background-color: transparent;
+                width: 21%;
+                height: 36px;
+                margin-top: 21px;
+                margin-left: 61%;
                 padding: 0px;
-                background-color: #FF6161;
-                border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+
+                #buttonTwo {
+                    display: flex;
+                    justify-content: center;
+                    width: 20%;
+                    height: 32px;
+                    margin: 0px;
+                    padding: 0px;
+                    background-color: #FF6161;
+                    border: 1px solid $outsidebordercolor;
+                    box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+                }
+
+                #buttonThree {
+                    display: flex;
+                    justify-content: center;
+                    width: 80%;
+                    height: 32px;
+                    margin: 0px;
+                    padding: 0px;
+                    color: $fontcolorheader;
+                    font-size: 16px;
+                    font-weight: 400;
+                    font-family: $primaryfont;
+                    background-color: #FF6161;
+                    border: 1px solid $outsidebordercolor;
+                    box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+                }
             }
 
-            #readyButton {
-                width: 70%;
-                height: 32px;
-                margin: 0px;
-                padding: 0px;
-                color: $fontcolorheader;
-                font-size: 16px;
-                font-weight: 400;
-                font-family: $primaryfont;
-                background-color: #FF6161;
+            #play {
+                display: none;
+                align-self: center;
+                width: 2.3%;
+                height: 20px;
+                margin-left: 2.8%;
+                background-image: url(../../Images/forward.svg);
+                background-position: center;
+                background-repeat: no-repeat;
+                background-color: #F7C9F3;
                 border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
-            }
-        }
+                box-shadow: inset -1px -1px 0 0 #997D97, 1px 1px 0 0 $fontcolorheader;
 
-        #stopButton {
-            display: none;
-            flex-direction: row;
-            position: relative;
-            width: 12.7955%;
-            height: 36px;
-            margin: 0px;
-            padding: 0px;
-
-            #buttonTwo {
-                display: flex;
-                justify-content: center;
-                width: 25%;
-                height: 32px;
-                margin: 0px;
-                padding: 0px;
-                background-color: rgb(97, 255, 136);
-                border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
             }
 
-            #buttonThree {
-                width: 70%;
-                height: 32px;
-                margin: 0px;
-                padding: 0px;
-                color: $fontcolorheader;
-                font-size: 16px;
-                font-weight: 400;
-                font-family: $primaryfont;
-                background-color: #FF6161;
-                border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+            .barStyle {
+                display: none;
+                align-self: center;
+                // -webkit-appearance: none;
+                // appearance: none;
+                width: 27.9%;
+                height: 20PX;
+                margin-left: 4px;
+                
+                &::-webkit-progress-bar {
+                    // background-color: #999999;                    
+                    box-shadow: inset 2px 2px 0 0 #FFFCFC, inset -2px -2px 0 0 #000000;
+                  }
+                
             }
-        }
 
-        
             #repeat {
                 display: none;
-                color: $outsidebordercolor;                
+                color: $outsidebordercolor;
+                font-size: 16px;
+                font-weight: 400;
+                font-family: $primaryfont;
                 justify-content: center;
-                width: 25%;
+                align-self: center;
+                width: 16.7%;
                 height: 32px;
-                margin: 0px;
+                margin-top: 33px;
+                margin-left: 13.5%;
+                margin-bottom: 34px;
                 padding: 0px;
                 border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+                box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
                 background-color: #FFF4FD;
+
+                &:hover {
+                    background-color: #F7C9F3;
+                    outline: 1px dotted $outsidebordercolor;
+                    outline-offset: -4px;
+                }
             }
 
             #upload {
                 display: none;
                 color: $outsidebordercolor;
-                width: 70%;
+                justify-content: center;
+                align-self: center;
+                width: 16.7%;
                 height: 32px;
-                margin: 0px;
+                margin-top: 33px;
+                margin-left: 1.6%;
+                margin-bottom: 34px;
                 padding: 0px;
                 font-size: 16px;
                 font-weight: 400;
                 font-family: $primaryfont;
                 border: 1px solid $outsidebordercolor;
-                box-shadow: inset -1px -1px 0 0 #993A3A, inset 1px 1px 0 0 $fontcolorheader;
+                box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
                 background-color: #FFF4FD;
-            }
-        
 
-        #cancel {
-            display: none;
-            width: 144px;
-            height: 32px;
+                &:hover {
+                    background-color: #F7C9F3;
+                    outline: 1px dotted $outsidebordercolor;
+                    outline-offset: -4px;
+                }
+            }
+            #cancel {
+                display: none;
+                justify-content: center;
+                align-self: center;
+                width: 16.7%;
+                height: 36px;
+                color: $outsidebordercolor;
+                font-size: 16px;
+                font-weight: 400;
+                font-family: $primaryfont;                
+                margin-left: 650px;
+                background-color: #FFF4FD;
+                border: solid 1px $outsidebordercolor;
+                box-shadow: inset -2ps -2ps 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
+    
+    
+                &:hover {
+                    background-color: #F7C9F3;
+                    outline: 1px dotted $outsidebordercolor;
+                    outline-offset: -4px;
+                }
+            }
 
         }
+
+        
     }
 }
