--- a/giF0S_Project/Styles/IndexSailorDay/sailorDay.css
+++ b/giF0S_Project/Styles/IndexSailorDay/sailorDay.css
@@ -13,7 +13,7 @@ body .light #title h1 {
   color: #FFFFFF;
 }
 
-body .light #buttonZone #buttonOne {
+body .light #content #buttonZone div #buttonOne {
   background-color: #F7C9F3;
   color: #110038;
   border: #110038 outset 1px;
@@ -21,30 +21,17 @@ body .light #buttonZone #buttonOne {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #buttonZone #buttonOne:active, body .light #buttonZone #buttonOne:hover {
+body .light #content #buttonZone div #buttonOne:active, body .light #content #buttonZone div #buttonOne:hover {
   background-color: #E6BBE2;
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-body .light #buttonZone #buttonOne a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  text-decoration: none;
+body .light #content #buttonZone div #buttonOne a {
   color: #110038;
-  width: 100%;
-  height: 100%;
 }
 
-body .light #buttonZone #buttonTwo {
-  cursor: pointer;
-}
-
-body .light #buttonZone #buttonTwo #buttonChooseTheme {
+body .light #content #buttonZone div #buttonTwo #buttonChooseTheme {
   background-color: #F7C9F3;
   color: #110038;
   border: #110038 outset 1px;
@@ -52,13 +39,13 @@ body .light #buttonZone #buttonTwo #buttonChooseTheme {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #buttonZone #buttonTwo #buttonChooseTheme:active, body .light #buttonZone #buttonTwo #buttonChooseTheme:hover {
+body .light #content #buttonZone div #buttonTwo #buttonChooseTheme:active, body .light #content #buttonZone div #buttonTwo #buttonChooseTheme:hover {
   background-color: #E6BBE2;
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-body .light #buttonZone #buttonTwo #dropDown {
+body .light #content #buttonZone div #buttonTwo #dropDown {
   background-color: #F7C9F3;
   color: #110038;
   border: #110038 outset 1px;
@@ -66,19 +53,19 @@ body .light #buttonZone #buttonTwo #dropDown {
           box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #buttonZone #buttonTwo #dropDown:active, body .light #buttonZone #buttonTwo #dropDown:hover {
+body .light #content #buttonZone div #buttonTwo #dropDown:active, body .light #content #buttonZone div #buttonTwo #dropDown:hover {
   background-color: #E6BBE2;
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-body .light #buttonZone #menuThemes {
+body .light #content #buttonZone #menuThemes {
   background-color: #E6E6E6;
   -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
           box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
 }
 
-body .light #buttonZone #menuThemes .day {
+body .light #content #buttonZone #menuThemes .day {
   background-color: #F0F0F0;
   border: #808080 1px solid;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
@@ -86,14 +73,14 @@ body .light #buttonZone #menuThemes .day {
   color: #110038;
 }
 
-body .light #buttonZone #menuThemes .day:hover {
+body .light #content #buttonZone #menuThemes .day:hover {
   background-color: #FFF4FD;
   border: #CCA6C9 1px solid;
   -webkit-box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #buttonZone #menuThemes .night {
+body .light #content #buttonZone #menuThemes .night {
   background-color: #F0F0F0;
   border: #808080 1px solid;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
@@ -101,33 +88,33 @@ body .light #buttonZone #menuThemes .night {
   color: #110038;
 }
 
-body .light #buttonZone #menuThemes .night:hover {
+body .light #content #buttonZone #menuThemes .night:hover {
   background-color: #FFF4FD;
   border: #CCA6C9 1px solid;
   -webkit-box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #E6DCE4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #linkMyGifos {
+body .light #content #linkMyGifos {
   color: #110038;
 }
 
-body .light #linkMyGifos:hover {
+body .light #content #linkMyGifos:hover {
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-body .light #linkMyGifos:active {
+body .light #content #linkMyGifos:active {
   color: #B4B4B4;
 }
 
-body .light #searchBox {
+body .light #content #searchBox {
   background-color: #E6E6E6;
   -webkit-box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #B4B4B4;
           box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #B4B4B4;
 }
 
-body .light #searchBox #searchBoxTitle {
+body .light #content #searchBox #searchBoxTitle {
   background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
   -webkit-box-shadow: inset 2px 0 0 0 #E6E6E6, inset 0 4px 0 0 #E6E6E6, inset -2px 0 0 0 #E6E6E6;
@@ -135,12 +122,14 @@ body .light #searchBox #searchBoxTitle {
   border-right: solid #B4B4B4 2px;
 }
 
-body .light #searchBox h2 {
+body .light #content #searchBox h2 {
+  padding-left: 6px;
   color: #FFFFFF;
   border-top: #FFFFFF solid 2px;
 }
 
-body .light #searchBox #mySearch {
+body .light #content #searchBox #mySearch {
+  padding-left: 16px;
   caret-color: #4180F6;
   color: #110038;
   border: solid 1px #979797;
@@ -148,23 +137,23 @@ body .light #searchBox #mySearch {
           box-shadow: inset -1px -1px 0 0 #E6E6E6, inset 1px 1px 0 0 #000000;
 }
 
-body .light #searchBox::-webkit-input-placeholder {
+body .light #content #searchBox::-webkit-input-placeholder {
   color: #B4B4B4;
 }
 
-body .light #searchBox:-ms-input-placeholder {
+body .light #content #searchBox:-ms-input-placeholder {
   color: #B4B4B4;
 }
 
-body .light #searchBox::-ms-input-placeholder {
+body .light #content #searchBox::-ms-input-placeholder {
   color: #B4B4B4;
 }
 
-body .light #searchBox::placeholder {
+body .light #content #searchBox::placeholder {
   color: #B4B4B4;
 }
 
-body .light #buttonSearch {
+body .light #content #buttonSearch {
   background-color: #E6E6E6;
   color: #B4B4B4;
   border: solid 1px #808080;
@@ -172,7 +161,7 @@ body .light #buttonSearch {
           box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #buttonSearch:active {
+body .light #content #buttonSearch:active {
   background-color: #E6BBE2;
   border: #110038 solid 1px;
   -webkit-box-shadow: inset -1px -1xp 0 0 #997D97, inset 1px1px 0 0 #FFFFFF;
@@ -181,21 +170,21 @@ body .light #buttonSearch:active {
   outline-offset: -4px;
 }
 
-body .light #buttonSearch:active #buttonContent {
+body .light #content #buttonSearch:active #buttonContent {
   color: #110038;
 }
 
-body .light #buttonSearch:active #buttonContent #mGlassImage {
+body .light #content #buttonSearch:active #buttonContent #mGlassImage {
   display: none;
 }
 
-body .light #buttonSearch:active #buttonContent #mGlass {
+body .light #content #buttonSearch:active #buttonContent #mGlass {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-body .light #buttonSearchInput {
+body .light #content #buttonSearchInput {
   background-color: #F7C9F3;
   border: 1px solid #110038;
   -webkit-box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 #FFFFFF;
@@ -203,23 +192,23 @@ body .light #buttonSearchInput {
   color: #110038;
 }
 
-body .light #subMenuSearch {
+body .light #content #subMenuSearch {
   background-color: #E6E6E6;
 }
 
-body .light #subMenuSearch button {
+body .light #content #subMenuSearch button {
   background-color: #E6E6E6;
   color: #110038;
 }
 
-body .light #subMenuSearch #Result1 {
+body .light #content #subMenuSearch #Result1 {
   background-color: #f0f0f0;
   border: solid 1px #808080;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #subMenuSearch #Result1:hover {
+body .light #content #subMenuSearch #Result1:hover {
   background-color: #DBDBDB;
   border: #808080 1PX solid;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
@@ -228,14 +217,14 @@ body .light #subMenuSearch #Result1:hover {
   outline-offset: -4px;
 }
 
-body .light #subMenuSearch #Result2 {
+body .light #content #subMenuSearch #Result2 {
   background-color: #f0f0f0;
   border: solid 1px #808080;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #subMenuSearch #Result2:hover {
+body .light #content #subMenuSearch #Result2:hover {
   background-color: #DBDBDB;
   border: #808080 1PX solid;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
@@ -244,14 +233,14 @@ body .light #subMenuSearch #Result2:hover {
   outline-offset: -4px;
 }
 
-body .light #subMenuSearch #Result3 {
+body .light #content #subMenuSearch #Result3 {
   background-color: #f0f0f0;
   border: solid 1px #808080;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
           box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
 }
 
-body .light #subMenuSearch #Result3:hover {
+body .light #content #subMenuSearch #Result3:hover {
   background-color: #DBDBDB;
   border: #808080 1PX solid;
   -webkit-box-shadow: inset -1px -1px 0 0 #B4B4B4, inset 1px 1px 0 0 #FFFFFF;
@@ -260,7 +249,8 @@ body .light #subMenuSearch #Result3:hover {
   outline-offset: -4px;
 }
 
-body .light #suggestions #suggest {
+body .light #content #suggestions #suggest {
+  padding-left: 7px;
   border: solid 1px #E6BBE2;
   -webkit-box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
           box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
@@ -268,40 +258,40 @@ body .light #suggestions #suggest {
   color: #110038;
 }
 
-body .light #suggestions #suggest::-webkit-input-placeholder {
+body .light #content #suggestions #suggest::-webkit-input-placeholder {
   color: #110038;
 }
 
-body .light #suggestions #suggest:-ms-input-placeholder {
+body .light #content #suggestions #suggest:-ms-input-placeholder {
   color: #110038;
 }
 
-body .light #suggestions #suggest::-ms-input-placeholder {
+body .light #content #suggestions #suggest::-ms-input-placeholder {
   color: #110038;
 }
 
-body .light #suggestions #suggest::placeholder {
+body .light #content #suggestions #suggest::placeholder {
   color: #110038;
 }
 
-body .light #gifSuggest .borderShadowGif {
+body .light #content #gifSuggest .borderShadowGif {
   background-color: #E6E6E6;
   -webkit-box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #B4B4B4;
           box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #B4B4B4;
 }
 
-body .light #gifSuggest .borderShadowGif img:hover {
+body .light #content #gifSuggest .borderShadowGif img:hover {
   outline: 1px dotted #110038;
   outline-offset: -1px;
 }
 
-body .light #gifSuggest p {
+body .light #content #gifSuggest p {
   color: #FFFFFF;
   background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
-body .light #gifSuggest .buttonCloseGif {
+body .light #content #gifSuggest .buttonCloseGif {
   background-image: url(../../Images/button3.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -311,7 +301,7 @@ body .light #gifSuggest .buttonCloseGif {
   border-left: solid 1px #FFFFFF;
 }
 
-body .light #gifSuggest .seeMoreButton {
+body .light #content #gifSuggest .seeMoreButton {
   color: #FFFFFF;
   background-color: #4180F6;
   border: solid 1px #4C2F99;
@@ -319,12 +309,13 @@ body .light #gifSuggest .seeMoreButton {
           box-shadow: inset 2px 2px 0 0 #FFFFFF, inset -2px -2px 0 0 #284F99;
 }
 
-body .light #gifSuggest .seeMoreButton:hover {
+body .light #content #gifSuggest .seeMoreButton:hover {
   outline: 1px dotted #110038;
   outline-offset: -5px;
 }
 
-body .light #trendsSection #trends {
+body .light #content #trendsSection #trends {
+  padding-left: 7px;
   border: solid 1px #E6BBE2;
   -webkit-box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
           box-shadow: inset -2px -2px 0 0 #ECDCE4, inset 2px 2px 0 0 #80687D;
@@ -332,57 +323,36 @@ body .light #trendsSection #trends {
   color: #110038;
 }
 
-body .light #trendsSection #trends::-webkit-input-placeholder {
+body .light #content #trendsSection #trends::-webkit-input-placeholder {
   color: #110038;
 }
 
-body .light #trendsSection #trends:-ms-input-placeholder {
+body .light #content #trendsSection #trends:-ms-input-placeholder {
   color: #110038;
 }
 
-body .light #trendsSection #trends::-ms-input-placeholder {
+body .light #content #trendsSection #trends::-ms-input-placeholder {
   color: #110038;
 }
 
-body .light #trendsSection #trends::placeholder {
+body .light #content #trendsSection #trends::placeholder {
   color: #110038;
 }
 
-body .light .trendsCharge img:hover {
-  outline: 1px dotted #110038;
-  outline-offset: -1px;
-}
-
-body .light .trendsCharge #gifSuggest5 {
-  background-color: #E6E6E6;
-}
-
-body .light .trendsCharge #gifSuggest5:hover {
-  margin-right: 0.3478%;
-  width: 20.4461%;
-  height: 304px;
+body .light #content .trendsCharge .chargeSmall:hover {
   -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
           box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-body .light .trendsCharge #gifSuggest5:hover img {
-  position: relative;
-  z-index: 1;
-  left: 3px;
-  bottom: 18px;
-  height: 100%;
-  width: 97.2778%;
-}
-
-body .light .trendsCharge #gifSuggest5:hover p {
+body .light #content .trendsCharge .chargeSmall:hover p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-body .light .trendsCharge #gifSuggest5 p {
+body .light #content .trendsCharge .chargeSmall p {
   color: #FFFFFF;
   -webkit-transform: translateY(277px);
           transform: translateY(277px);
@@ -390,112 +360,65 @@ body .light .trendsCharge #gifSuggest5 p {
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
-body .light .trendsCharge .secondaryTrendsCharge {
-  background: #E6E6E6;
-}
-
-body .light .trendsCharge .secondaryTrendsCharge:hover {
-  -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-          box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
-  margin-right: 0.3478%;
-  width: 20.4461%;
-  height: 304px;
-  outline: 1px dotted #110038;
-  outline-offset: -4px;
-}
-
-body .light .trendsCharge .secondaryTrendsCharge:hover img {
-  position: absolute;
-  z-index: 1;
-  left: 4px;
-  bottom: 2px;
-  height: 98%;
-  width: 97.2778%;
-}
-
-body .light .trendsCharge .secondaryTrendsCharge:hover p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-body .light .trendsCharge .secondaryTrendsCharge p {
-  color: #FFFFFF;
-  -webkit-transform: translateY(277px);
-          transform: translateY(277px);
-  background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
-  background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
-}
-
-body .light .trendsCharge .bigLeftTrendsCharge {
-  background: #E6E6E6;
+body .light #content .trendsCharge .bigLeftTrendsCharge {
   color: #FFFFFF;
 }
 
-body .light .trendsCharge .bigLeftTrendsCharge:hover {
-  margin-right: 0.3478%;
-  width: 41.5865%;
-  height: 304px;
+body .light #content .trendsCharge .bigLeftTrendsCharge:hover {
+  width: 50%;
   -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
           box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-body .light .trendsCharge .bigLeftTrendsCharge:hover img {
-  position: absolute;
-  z-index: 1;
-  width: 99%;
-  height: 98%;
-  top: 3px;
-  left: 3px;
+body .light #content .trendsCharge .bigLeftTrendsCharge:hover img {
+  width: 98.6%;
 }
 
-body .light .trendsCharge .bigLeftTrendsCharge:hover p {
+body .light #content .trendsCharge .bigLeftTrendsCharge:hover p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-body .light .trendsCharge .bigLeftTrendsCharge p {
+body .light #content .trendsCharge .bigLeftTrendsCharge p {
   -webkit-transform: translateY(275px);
           transform: translateY(275px);
   background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
   background: linear-gradient(270deg, #F7C9F3 0%, #4180F6 100%);
 }
 
-body .light .trendsCharge .bigRightTrendsCharge {
-  background: #faf1f9;
+body .light #content .trendsCharge .bigRightTrendsCharge {
   color: #FFFFFF;
 }
 
-body .light .trendsCharge .bigRightTrendsCharge:hover {
+body .light #content .trendsCharge .bigRightTrendsCharge:hover {
   margin-right: 0.3478%;
   margin-left: 0.3478%;
-  width: 41.5865%;
-  height: 304px;
+  width: 50%;
+  height: 298px;
   -webkit-box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
           box-shadow: inset -2px -2px 0 0 #B4B4B4, inset 2px 2px 0 0 #FFFFFF;
   outline: 1px dotted #110038;
   outline-offset: -4px;
 }
 
-body .light .trendsCharge .bigRightTrendsCharge:hover img {
+body .light #content .trendsCharge .bigRightTrendsCharge:hover img {
   position: absolute;
   z-index: 1;
-  width: 99%;
-  height: 98%;
-  top: 3px;
-  left: 3px;
+  width: 98.5%;
+  top: 4px;
+  left: 4px;
 }
 
-body .light .trendsCharge .bigRightTrendsCharge:hover p {
+body .light #content .trendsCharge .bigRightTrendsCharge:hover p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-body .light .trendsCharge .bigRightTrendsCharge p {
+body .light #content .trendsCharge .bigRightTrendsCharge p {
   -webkit-transform: translateY(275px);
           transform: translateY(275px);
   background: -webkit-gradient(linear, right top, left top, from(#F7C9F3), to(#4180F6));
