--- a/giF0S_Project/Styles/PreCatch/preCatch.css
+++ b/giF0S_Project/Styles/PreCatch/preCatch.css
@@ -76,8 +76,18 @@ body #menuSection #menuContainer {
 }
 
 body #menuSection #menuContainer h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: relative;
-  margin-top: 0px;
+  margin-top: 3px;
+  margin-left: 3px;
+  width: 98.5%;
+  height: 24px;
+  padding-left: 4px;
   color: #FFFFFF;
   font-size: 14px;
   font-weight: 700;
@@ -94,18 +104,25 @@ body #menuSection #menuContainer #here {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 19px;
+  margin-bottom: 0px;
 }
 
 body #menuSection #menuContainer #here img {
   width: 32px;
   height: 32px;
+  margin-left: 3.6%;
 }
 
 body #menuSection #menuContainer #here h2 {
   margin-left: 16px;
+  padding-bottom: 12px;
   color: #110038;
   font-size: 16px;
   font-weight: 700;
@@ -114,6 +131,7 @@ body #menuSection #menuContainer #here h2 {
 
 body #menuSection #menuContainer p {
   color: #110038;
+  margin-top: 0px;
   margin-left: 73px;
   font-size: 14px;
   font-weight: 400;
@@ -123,12 +141,17 @@ body #menuSection #menuContainer p {
 
 body #menuSection #menuContainer #listCreateGifs {
   list-style: none;
+  margin-top: 0px;
   margin-left: 33px;
   color: #110038;
   font-size: 14px;
   font-weight: 400;
   font-family: "Chakra Petch";
-  line-height: 20px;
+  line-height: 25px;
+}
+
+body #menuSection #menuContainer #listCreateGifs p {
+  margin-left: 0px;
 }
 
 body #menuSection #buttonsContainer {
@@ -139,7 +162,8 @@ body #menuSection #buttonsContainer {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  margin-left: 0px;
+  margin-top: 28px;
+  margin-left: 95px;
 }
 
 body #menuSection #buttonsContainer button {
@@ -151,6 +175,7 @@ body #menuSection #buttonsContainer button {
   cursor: pointer;
   width: 133px;
   height: 36px;
+  margin-top: 5px;
   margin-left: 16px;
   background-color: #FFF4FD;
   border: 1px solid #110038;
@@ -193,7 +218,47 @@ body #suggestions {
   margin-left: 6.9541%;
 }
 
-body #suggestions #suggest {
+body #suggestions #myGuifos {
+  padding-left: 7px;
+  caret-color: #4180F6;
+  color: #110038;
+  font-size: 16px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
   width: 100%;
+  height: 32px;
+  margin-bottom: 17px;
+  background-color: #FFFAFE;
+  border: 1px solid #E6BBE2;
+  -webkit-box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+          box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
+}
+
+body #suggestions #myGuifos::-webkit-input-placeholder {
+  color: #110038;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+}
+
+body #suggestions #myGuifos:-ms-input-placeholder {
+  color: #110038;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+}
+
+body #suggestions #myGuifos::-ms-input-placeholder {
+  color: #110038;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
+}
+
+body #suggestions #myGuifos::placeholder {
+  color: #110038;
+  font-size: 14px;
+  font-family: "Chakra Petch";
+  font-weight: 400;
 }
 /*# sourceMappingURL=preCatch.css.map */
