--- a/giF0S_Project/Styles/index.css
+++ b/giF0S_Project/Styles/index.css
@@ -48,6 +48,10 @@ body #content #buttonZone #logotipe {
   grid-column-end: 1;
 }
 
+body #content #buttonZone .darkLogo {
+  display: none;
+}
+
 body #content #buttonZone div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -58,6 +62,7 @@ body #content #buttonZone div {
 }
 
 body #content #buttonZone div #buttonOne {
+  cursor: pointer;
   -ms-flex-item-align: center;
       align-self: center;
   display: -webkit-box;
@@ -145,7 +150,7 @@ body #content #buttonZone div #menuThemes {
   display: none;
   position: absolute;
   top: 89px;
-  right: 15.5%;
+  right: 16.5%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -156,7 +161,7 @@ body #content #buttonZone div #menuThemes {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 11.82%;
+  width: 12.5%;
   height: 102px;
   padding-left: 0px;
   list-style: none;
@@ -305,7 +310,7 @@ body #content #searchBox::placeholder {
 body #content #buttonSearch {
   text-align: center;
   margin-left: 8px;
-  width: 8.5%;
+  width: 102px;
   height: 36px;
   font-size: 16px;
   font-family: "Chakra Petch";
