--- a/giF0S_Project/Styles/PreCatch/preCatch.scss
+++ b/giF0S_Project/Styles/PreCatch/preCatch.scss
@@ -187,7 +187,7 @@ body {
             padding-left: 7px;
             caret-color: #4180F6;
             color: $outsidebordercolor;
-            font-size: 16px;            
+            font-size: 16px;
             font-family: $primaryfont;
             font-weight: 400;
             width: 100%;
@@ -197,11 +197,32 @@ body {
             border: 1px solid #E6BBE2;
             box-shadow: inset -2px -2px 0 0 #E6DCE4, inset 2px 2px 0 0 #80687D;
 
-            &::placeholder{                
+            &::placeholder {
                 color: $outsidebordercolor;
                 font-size: 14px;
                 font-family: $primaryfont;
                 font-weight: 400;
+            }
+        }
+    }
+
+    #containerGifs {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;        
+        margin-left: 6.9%;
+
+        div {        
+            width: 21.7%;
+            height: 298%;
+            margin-bottom: 17px;          
+
+            &:not(:nth-child(4)) {
+                margin-right: 16px;
+            }
+            img {
+                width: 100%;
+                height: 298px;
             }
         }
     }
