--- a/giF0S_Project/Styles/PreCatch/preCatch.css
+++ b/giF0S_Project/Styles/PreCatch/preCatch.css
@@ -49,6 +49,7 @@ body #buttonZone #arrowBack {
 }
 
 body #buttonZone #logotipe {
+  cursor: pointer;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
