--- a/giF0S_Project/Styles/index.css
+++ b/giF0S_Project/Styles/index.css
@@ -38,6 +38,7 @@ body #content #buttonZone {
 }
 
 body #content #buttonZone #logotipe {
+  cursor: pointer;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
