--- a/giF0S_Project/Styles/index.scss
+++ b/giF0S_Project/Styles/index.scss
@@ -33,6 +33,7 @@ body {
             height: 118px;
 
             #logotipe {
+                cursor: pointer;
                 align-self: center;
                 margin-right: 50%;
                 width: 91px;
