--- a/giF0S_Project/Styles/Catch/catch.scss
+++ b/giF0S_Project/Styles/Catch/catch.scss
@@ -10,7 +10,6 @@ $primaryfont: "Chakra Petch";
 body {
     margin: 0%;
     padding: 0%;
-    border: 0%;
     background-color: rgb(250, 241, 249);
 
     //THIS SECTION CONTENT THE TOP BAR WITH ITS GRADIENT STYLE
@@ -46,7 +45,6 @@ body {
         #logotipe {
             align-self: center;
             width: 91px;
-            // margin-left: 6.3288%;
             padding-left: 0.5565%;
             padding-right: 0.2504%;
         }
@@ -80,6 +78,7 @@ body {
             background: linear-gradient(270deg, $themeonegradientcolor1 0%, $themeonegradientcolor2 100%);
 
             #buttonClose {
+                cursor: pointer;
                 position: absolute;
                 top: 1.5px;
                 right: 4px;
@@ -115,7 +114,7 @@ body {
                 justify-content: center;
                 align-items: center;
                 width: 100%;
-                height: 434px;                
+                height: 434px;
                 background-color: $fontcolorheader;
                 color: $outsidebordercolor;
                 font-family: $primaryfont;
@@ -137,7 +136,6 @@ body {
                     width: 37%;
                     height: 24PX;
                     margin-top: 41px;
-                    // margin-left: 4px;
                     box-shadow: inset 2px 2px 0 0 #000000, inset -2px -2px 0 0 #FFFCFC;
                     background-color: $searchBarColor;
 
@@ -155,7 +153,7 @@ body {
                         border-right: #F7C9F3;
                         box-shadow: none;
                     }
-    
+
                     span {
                         z-index: 3;
                         width: 5.8%;
@@ -168,6 +166,43 @@ body {
             }
         }
 
+        #contentFinal {
+            display: none;
+            width: 30%;
+            height: 300px;
+            transform: translate(216%, -83%);
+            margin-bottom: 14px;
+            margin-bottom: 14px;
+            margin-top: 14px;
+            padding-bottom: 200px;
+            margin-left: 24px;
+            box-shadow: none;
+
+            p {
+                display: flex;
+                color: $outsidebordercolor;
+                font-size: 16px;
+                font-weight: 700;
+                font-family: $primaryfont;
+            }
+
+            button {
+                display: flex;
+                justify-content: center;
+                margin-top: 14px;
+                color: $outsidebordercolor;
+                font-size: 16px;
+                font-weight: 400;
+                font-family: $primaryfont;
+                width: 100%;
+                height: 36px;
+                cursor: pointer;
+                background-color: #FFF4FD;
+                border: 1px solid $outsidebordercolor;
+                box-shadow: inset -1px -1px 0 0 #997D97, inset 1px 1px 0 0 $fontcolorheader;
+            }
+        }
+
         #post {
             display: flex;
             flex-direction: row;
@@ -177,6 +212,7 @@ body {
             box-shadow: none;
 
             #catchButton {
+                cursor: pointer;
                 display: flex;
                 flex-direction: row;
                 position: relative;
@@ -248,6 +284,7 @@ body {
             }
 
             #stopButton {
+                cursor: pointer;
                 display: none;
                 flex-direction: row;
                 position: relative;
@@ -339,6 +376,7 @@ body {
             }
 
             #repeat {
+                cursor: pointer;
                 display: none;
                 color: $outsidebordercolor;
                 font-size: 16px;
@@ -364,6 +402,7 @@ body {
             }
 
             #upload {
+                cursor: pointer;
                 display: none;
                 color: $outsidebordercolor;
                 justify-content: center;
@@ -389,6 +428,7 @@ body {
             }
 
             #cancel {
+                cursor: pointer;
                 display: none;
                 justify-content: center;
                 align-self: center;
@@ -398,7 +438,7 @@ body {
                 font-size: 16px;
                 font-weight: 400;
                 font-family: $primaryfont;
-                margin-left: 650px;
+                margin-left: 81%;
                 background-color: #FFF4FD;
                 border: solid 1px $outsidebordercolor;
                 box-shadow: inset -2ps -2ps 0 0 $searchBarColor, inset 2px 2px 0 0 $fontcolorheader;
