--- a/giF0S_Project/Styles/PreCatch/preCatch.scss
+++ b/giF0S_Project/Styles/PreCatch/preCatch.scss
@@ -44,6 +44,7 @@ body {
         }
 
         #logotipe {
+            cursor: pointer;
             align-self: center;
             width: 91px;
             // margin-left: 6.3288%;
